created 40mb v1 dataset

--- a/alldataset.ipynb
+++ b/alldataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "bb35db06",
    "metadata": {},
    "outputs": [
@@ -352,29 +352,29 @@
       "Collected 210777 persona-derived pairs so far.\n",
       "\n",
       "Total raw samples collected: 480831\n",
-      "After dedupe: 423139\n",
-      "Wrote 423139 samples to compatika_combined.txt (size: 56.05 MB)\n",
+      "After dedupe: 422648\n",
+      "Wrote 422648 samples to compatika_combined.txt (size: 43.74 MB)\n",
       "Done. Sample output preview:\n",
-      "USER: i am good , how about yourself ?\n",
-      "COMPATIKA: I hear what you’re saying. What feeling comes up with it?\n",
+      "USER: Just give me 20 million dollars and let me retire early. gg wp life\n",
+      "COMPATIKA: Thanks for opening up.\n",
       "\n",
-      "USER: ooh nice .\n",
-      "COMPATIKA: That seems important. What part stands out emotionally?\n",
+      "USER: i stay home with the kids , my wife is a baker .\n",
+      "COMPATIKA: I’m listening.\n",
       "\n",
-      "USER: i was scared to walk home yesterday\n",
-      "COMPATIKA: Why were you scared?\n",
+      "USER: that is cool what is your favorite band ?\n",
+      "COMPATIKA: I’m listening.\n",
       "\n",
-      "USER: Remember the year “Song 2” was number 2? Good times.\n",
-      "COMPATIKA: I’m listening—how is this affecting you today?\n",
+      "USER: do you like hiking\n",
+      "COMPATIKA: Thanks for telling me that.\n",
       "\n",
-      "USER: well that is america for you i am not a huge fan of the government either\n",
-      "COMPATIKA: Thanks for opening up. What’s moving inside you as you say that?\n",
+      "USER: That's the funniest mental image I've had in a very long time!\n",
+      "COMPATIKA: It sounds like something truly uplifting happened.\n",
       "\n",
-      "USER: i have a mini van .\n",
-      "COMPATIKA: Thanks for telling me that. What’s the emotion behind it?\n",
+      "USER: Don't you even dare try to put any blame on [NAME]\n",
+      "COMPATIKA: I hear your frustration.\n",
       "\n",
-      "USER: blue .\n",
-      "COMPATIKA: That sounds meaningful. How does it feel for you internally?\n",
+      "USER: [NAME] has no touch..That is why [NAME] kept dropping the ball..\n",
+      "COMPATIKA: Thanks for telling me that.\n",
       "\n"
      ]
     }
@@ -403,95 +403,96 @@
     "\n",
     "# ========== Templates / mappings ==========\n",
     "# Emotion -> templates (extend these lists to increase variety)\n",
-    "TEMPLATES = TEMPLATES = {\n",
+    "TEMPLATES = {\n",
     "    \"sadness\": [\n",
-    "        \"That sounds really painful. It’s okay to feel this way. Want to tell me what hurts most?\",\n",
-    "        \"I’m sorry you’re feeling this. I’m here with you—what happened?\",\n",
-    "        \"It makes sense that this feels heavy. What part is weighing on you the most?\",\n",
-    "        \"That sadness sounds real. You deserve space to feel it. Want to share more?\",\n",
-    "        \"It sounds like your heart is carrying a lot. What feels hardest right now?\",\n",
-    "        \"I hear how much this affected you. What do you wish could have been different?\",\n",
-    "        \"It’s understandable you’d feel sad about that. What’s underneath the sadness?\",\n",
-    "        \"I’m here. Take your time—what emotion is coming up the strongest?\"\n",
+    "        \"That sounds really painful, and it’s okay to feel this way.\",\n",
+    "        \"I’m sorry you’re feeling this. I’m here with you.\",\n",
+    "        \"It makes sense that this feels heavy.\",\n",
+    "        \"That sadness sounds real, and you deserve space to feel it.\",\n",
+    "        \"It sounds like your heart is carrying a lot right now.\",\n",
+    "        \"I hear how much this affected you.\",\n",
+    "        \"It’s understandable you’d feel sad about that.\",\n",
+    "        \"I’m here with you as these emotions come up.\"\n",
     "    ],\n",
     "\n",
     "    \"anger\": [\n",
-    "        \"It makes sense to feel angry about that. Want to share what set it off?\",\n",
-    "        \"I hear your frustration. What part of this felt most unfair?\",\n",
-    "        \"Your anger is valid. What boundary do you think was crossed?\",\n",
-    "        \"It sounds like something really bothered you. What triggered it the most?\",\n",
-    "        \"That reaction tells me something mattered to you. What was it?\",\n",
-    "        \"I can feel the intensity there. Want to unpack the root of it together?\",\n",
-    "        \"It’s okay to feel upset. What moment pushed you to that point?\",\n",
-    "        \"That frustration sounds real. What do you wish they understood?\"\n",
+    "        \"It makes sense to feel angry about that.\",\n",
+    "        \"I hear your frustration.\",\n",
+    "        \"Your anger is valid.\",\n",
+    "        \"It sounds like something really bothered you.\",\n",
+    "        \"That reaction shows how much this mattered to you.\",\n",
+    "        \"I can feel the intensity in what you shared.\",\n",
+    "        \"It’s okay to feel upset.\",\n",
+    "        \"That frustration you’re feeling is real.\"\n",
     "    ],\n",
     "\n",
     "    \"anxiety\": [\n",
-    "        \"Feeling anxious can be exhausting. What’s worrying you most right now?\",\n",
-    "        \"It’s okay to feel nervous. Want to talk through what’s on your mind?\",\n",
-    "        \"That tension sounds heavy. What thought keeps coming back?\",\n",
-    "        \"You’re not alone—anxiety can feel overwhelming. What triggered it?\",\n",
-    "        \"It makes sense your body reacted that way. What do you think it's trying to protect you from?\",\n",
-    "        \"That sounds stressful. What’s the main fear underneath it?\",\n",
-    "        \"I hear your worry. Want to sort through it gently step by step?\",\n",
-    "        \"You’re carrying a lot of tension. What part feels the strongest?\"\n",
+    "        \"Feeling anxious can be exhausting.\",\n",
+    "        \"It’s okay to feel nervous.\",\n",
+    "        \"That tension sounds heavy.\",\n",
+    "        \"You’re not alone—anxiety can feel overwhelming.\",\n",
+    "        \"It makes sense your body reacted that way.\",\n",
+    "        \"That sounds stressful.\",\n",
+    "        \"I hear your worry.\",\n",
+    "        \"You’re carrying a lot of tension.\"\n",
     "    ],\n",
     "\n",
     "    \"fear\": [\n",
-    "        \"That sounds scary. I’m here with you—what feels most frightening?\",\n",
-    "        \"It’s understandable to feel afraid. Want to share what’s worrying you?\",\n",
-    "        \"That fear sounds real. What do you notice happening inside you?\",\n",
-    "        \"You’re safe here. What part of this situation feels the most uncertain?\",\n",
-    "        \"It makes sense you're scared—what do you think might happen?\",\n",
-    "        \"That sounded like a fearful moment. Want to talk about it?\",\n",
-    "        \"Fear can feel overwhelming. What triggered it for you?\",\n",
-    "        \"You’re not alone in that feeling. What’s the fear pointing to?\"\n",
+    "        \"That sounds scary, and I’m here with you.\",\n",
+    "        \"It’s understandable to feel afraid.\",\n",
+    "        \"That fear sounds real.\",\n",
+    "        \"You’re safe here.\",\n",
+    "        \"It makes sense that you’re scared.\",\n",
+    "        \"That moment sounded really frightening.\",\n",
+    "        \"Fear can be overwhelming.\",\n",
+    "        \"You’re not alone in that feeling.\"\n",
     "    ],\n",
     "\n",
     "    \"joy\": [\n",
-    "        \"That’s wonderful to hear! What made the moment feel so good?\",\n",
-    "        \"I’m glad you’re feeling joyful. Want to share more about it?\",\n",
-    "        \"That’s such a warm moment. What stood out to you the most?\",\n",
-    "        \"It sounds like something truly uplifting happened. What was it?\",\n",
-    "        \"I can hear the happiness in your words. What sparked it?\",\n",
-    "        \"That joy sounds genuine. What are you appreciating about it?\",\n",
-    "        \"That feels like a bright spot. Want to savor it a bit more?\",\n",
-    "        \"It’s lovely to hear something positive. What does it mean to you?\"\n",
+    "        \"That’s wonderful to hear.\",\n",
+    "        \"I’m glad you’re feeling joyful.\",\n",
+    "        \"That’s such a warm moment.\",\n",
+    "        \"It sounds like something truly uplifting happened.\",\n",
+    "        \"I can hear the happiness in your words.\",\n",
+    "        \"That joy sounds genuine.\",\n",
+    "        \"That feels like a bright spot.\",\n",
+    "        \"It’s lovely to hear something positive.\"\n",
     "    ],\n",
     "\n",
     "    \"love\": [\n",
-    "        \"That’s a warm feeling. What does that person or experience mean to you?\",\n",
-    "        \"It sounds meaningful to feel that way. Want to tell me more?\",\n",
-    "        \"That affection seems deep. What do you value most about it?\",\n",
-    "        \"That sounds like a heartfelt connection. How does it feel?\",\n",
-    "        \"It’s a beautiful emotion. What brought it up for you?\",\n",
-    "        \"I can feel the warmth in that. What does it bring out in you?\",\n",
-    "        \"Love can carry many layers. What part is strongest for you?\",\n",
-    "        \"It sounds like something very important to you. Want to share more?\"\n",
+    "        \"That’s a warm and meaningful feeling.\",\n",
+    "        \"It sounds meaningful to feel that way.\",\n",
+    "        \"That affection seems deep.\",\n",
+    "        \"That sounds like a heartfelt connection.\",\n",
+    "        \"It’s a beautiful emotion.\",\n",
+    "        \"I can feel the warmth in that.\",\n",
+    "        \"Love can carry many layers.\",\n",
+    "        \"It sounds like something very important to you.\"\n",
     "    ],\n",
     "\n",
     "    \"neutral\": [\n",
-    "        \"Thanks for sharing that. How are you feeling about it right now?\",\n",
-    "        \"I hear you. Want to explore what this brings up for you?\",\n",
-    "        \"That sounds meaningful. How does it feel for you internally?\",\n",
-    "        \"Thanks for telling me that. What’s the emotion behind it?\",\n",
-    "        \"I’m listening—how is this affecting you today?\",\n",
-    "        \"That seems important. What part stands out emotionally?\",\n",
-    "        \"Thanks for opening up. What’s moving inside you as you say that?\",\n",
-    "        \"I hear what you’re saying. What feeling comes up with it?\"\n",
+    "        \"Thanks for sharing that.\",\n",
+    "        \"I hear you.\",\n",
+    "        \"That sounds meaningful.\",\n",
+    "        \"Thanks for telling me that.\",\n",
+    "        \"I’m listening.\",\n",
+    "        \"That seems important.\",\n",
+    "        \"Thanks for opening up.\",\n",
+    "        \"I hear what you’re saying.\"\n",
     "    ],\n",
     "\n",
     "    \"default\": [\n",
-    "        \"Thank you for sharing that. How are you feeling about it?\",\n",
-    "        \"I’m listening. Want to tell me more about what’s going on?\",\n",
-    "        \"That sounds meaningful—what does it bring up for you?\",\n",
-    "        \"Thanks for telling me. What emotion is underneath that?\",\n",
-    "        \"I hear you. What’s happening inside as you think about this?\",\n",
-    "        \"That’s important. How did it make you feel?\",\n",
-    "        \"I’m here with you. What’s coming up emotionally?\",\n",
-    "        \"Tell me more—what part of this matters most to you?\"\n",
+    "        \"Thank you for sharing that.\",\n",
+    "        \"I’m listening.\",\n",
+    "        \"That sounds meaningful.\",\n",
+    "        \"Thanks for telling me.\",\n",
+    "        \"I hear you.\",\n",
+    "        \"That’s important.\",\n",
+    "        \"I’m here with you.\",\n",
+    "        \"I’m here with whatever you’re feeling.\"\n",
     "    ]\n",
     "}\n",
+    "\n",
     "\n",
     "\n",
     "# Map label names in GoEmotions to the canonical keys above (adjust as needed)\n",
